# CVLite.cpp

./: CMakeLists.txt
benchmarks/: bench_conv.cpp
examples/: simple_inference.cpp
include/cvlite/core/: shape.hpp  tensor.hpp
include/cvlite/layers/: conv3x3.hpp  layer.hpp  relu.hpp
include/cvlite/pipeline/: sequential.hpp
src/core/: shape.cpp  tensor.cpp
src/layers/: conv3x3.cpp  relu.cpp
tests/: test_tensor.cpp
